# tgbot-manage-addresslist-mikrotik

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml  setup_bot.py
.github/workflows/: docker-publish.yml
docs/superpowers/plans/: 2026-04-22-mikrotik-telegram-bot.md  2026-04-23-inline-safe-flows.md  2026-04-23-multi-mikrotik-access.md
docs/superpowers/specs/: 2026-04-22-mikrotik-telegram-bot-design.md  2026-04-23-inline-safe-flows-design.md  2026-04-23-multi-mikrotik-access-design.md
src/tgbot_manage_addresslist/: __main__.py  app.py  installer.py  logic.py  mikrotik.py  settings.py  telegram_bot.py
src/tgbot_manage_addresslist/bot/: handlers.py  keyboards.py  states.py
src/tgbot_manage_addresslist/config/: settings.py
src/tgbot_manage_addresslist/mikrotik/: client.py
src/tgbot_manage_addresslist/services/: address_list_manager.py
src/tgbot_manage_addresslist/validation/: ip_lists.py
tests/: test_add_flow_state.py  test_address_list_manager.py  test_app.py  test_installer.py  test_mikrotik_client.py  test_settings.py  test_telegram_bot.py  test_validation.py
