[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgbot-manage-addresslist-mikrotik"
version = "0.1.0"
description = "Telegram bot for managing MikroTik address lists over SSH"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20.0,<4.0.0",
  "asyncssh>=2.21.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[project.scripts]
tgbot-manage-addresslist = "tgbot_manage_addresslist.__main__:main"
tgbot-manage-addresslist-setup = "tgbot_manage_addresslist.installer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
